HTML input e2e testing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="component-container">
   <app-sample-one></app-sample-one>
   <app-sample-two></app-sample-two>
+  <app-sample-form></app-sample-form>
 </div>
